--- a/sites-available/000-default.conf
+++ b/sites-available/000-default.conf
@@ -33,9 +33,9 @@
 	</Directory>
 	
 	# DODANO !!!!!!!!!!!
-	<Directory /home/ep/NetBeansProjects/>
-             Require all denied
-        </Directory>
+	#<Directory /home/ep/NetBeansProjects/>
+         #    Require all denied
+        #</Directory>
 
 </VirtualHost>
 
